			SWI-Prolog ChangeLog
			====================

  * MODIFIED: Prolog Navigator now calls default edit/1 interface (suggested
    by Tolga Konik).

  * ADDED: EWOULDBLOCK handling in pl-stream.h, so we can use this interface
    on machines that do not support this error (Windows).

  * FIXED: Various minor improvements in the Windows registration of Prolog.

  * ADDED: unwise_install to wise.pl to do the registration after running
    Wise.

  * FIXED: qsave_program handling of loaded foreign libraries.  Reported
    by Fabien Todescato.

  * ADDED: GUI-Tracer: add pseudo variable names DCG_list and DCG_tail

  * ADDED: plwin.exe: add menu item to edit the `associated' file.

  * FIXED: Various GUI-Tracer problems concerning source-location in DCG
    rules.

  * FIXED: Properly handle breakpoints in $xr_member/2 (used by explain/1).


VERSION 5.0.3
=============

  * FIXED: Win32: Various issues in the TCP/IP package (library(socket))
    and XPCE socket handling: Better error checking and messages and proper
    handling of WSAEWOULDBLOCK messages.

  * PORT: No longer print a message if the locale cannot be initialised.
    A bit dubious, but some installations appear to have a broken locale
    subsystem.

  * FIXED: Non-portable test in config.guess (Kenneth Pronovici).

  * FIXED: reported undefined predicate by check/0 on plcon.exe (Mike Elston).

  * ENHANCED: Allow for PL_set_feature() before PL_initialise().  Improved
    initialisation procedure for plwin.exe for better compatibility with
    the other versions.

  * ENHANCED: Cleanup procedure on Windows library(shlib) and PL_cleanup():
    try to avoid (some) crashes when unloading foreign code.

  * FIXED: Properly deal with the vararg foreign calling convention
    for cleanup (CUTTED).  Spotted by Sergey Tikhonov.

  * FIXED: Check whether stack sizes are not allocated above physical
    limits (128 MB on 32-bit machines)

  * BUILD: Fixed missing references to `runtex' from various Makefiles